Cleanup ee#-test-integration with focus on proper deploy testing